fix content overflow

--- a/src/components/Home/components/Navigation/Problem/styles.scss
+++ b/src/components/Home/components/Navigation/Problem/styles.scss
@@ -9,7 +9,9 @@
         flex-direction: row;
 
         .navItemButton {
+            padding-top: 24px;
             flex: 1;
+            height: 100%;
             margin: auto;
         }
     }
